2010-07-02  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 41565 - Repatching in ARMv7Assembler::repatchLoadPtrToLEA is broken

        This method tried to repatch a LDR (T2) into an ADD (T3) - but it only
        repatches the first instruction word.  The layout of the fields in the
        second word is different, and also needs repatching.

        * assembler/ARMv7Assembler.h:
        (JSC::ARMv7Assembler::repatchLoadPtrToLEA):

2010-07-02  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Clamp the number of arguments supported by function.apply
        https://bugs.webkit.org/show_bug.cgi?id=41351
        <rdar://problem/8142141>

        Add clamping logic to function.apply similar to that
        enforced by firefox.  We have a smaller clamp than
        firefox as our calling convention means that stack
        usage is proportional to argument count -- the firefox
        limit is larger than you could actually call.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/Arguments.h:
        (JSC::Arguments::):

2010-07-02  Chao-ying Fu  <fu@mips.com>

        Reviewed by Oliver Hunt.

        Re-enable JIT_OPTIMIZE_NATIVE_CALL on MIPS
        https://bugs.webkit.org/show_bug.cgi?id=40179

        Add the MIPS part to re-enable JIT_OPTIMIZE_NATIVE_CALL.

        * jit/JITOpcodes.cpp:
        (JSC::JIT::privateCompileCTINativeCall):
        * wtf/Platform.h:

2010-07-02  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 41552 - Clean up ARMv7 vfp code generation
        Emit separate opcode individually, remove magic numbers.

        Also remove invalid assert from JSImmediate (number cells are not CELL_MASK aligned).

        * assembler/ARMv7Assembler.h:
        (JSC::ARMv7Assembler::):
        (JSC::ARMv7Assembler::vadd_F64):